@@ -728,7 +728,7 @@ unchanged.</para>
 	  <term><parameter role="keyword">parent</parameter>&nbsp;:</term>
 	  <listitem><simpara>the <link
 linkend="class-gtktreeiter"><classname>gtk.TreeIter</classname></link>
-pointing to the parent</simpara></listitem>
+pointing to the parent or <literal>None</literal>.</simpara></listitem>
 	</varlistentry>
 	<varlistentry>
 	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
@@ -745,6 +745,10 @@ pointing to the first child of <parameter>parent</parameter>.  If
 <parameter>parent</parameter> has no children, <literal>None</literal> is
 returned. <parameter>parent</parameter> will remain a valid node after this
 method has been called.</para>
+      <para>If <parameter>parent</parameter> is <literal>None</literal> returns
+      the first node, equivalent to
+      <methodname><link linkend="method-gtktreemodel--get-iter-first">gtk.TreeModel.get_iter_first</link></methodname>().
+      </para>
 
     </refsect2>
 
